[Mobile Contact] Fix spacing on last name input

--- a/src/sass/_mobile.scss
+++ b/src/sass/_mobile.scss
@@ -609,6 +609,12 @@ body {
                         }
                     }
                 }
+                &contact {
+                    
+                    .contactForm .hubspotFormWrapper .hs-nested-form-fix .hs-form .form-columns-2 .hs-form-field + .hs-form-field .input {
+                        margin-left: 0;
+                    }
+                }
             }
             &.backgroundFrame {
                 background-size: cover;
